# find_track

./: .gitignore  CMakeLists.txt  main.cpp  play_ground.cpp  tracker.cpp  tracker.h  utils.cpp  utils.h
python/: convolve_sliding.py  extract.py  lane_identifier.py  process_video.py  utils.py
